Updated Featured Products

--- a/cloudmart-frontend.yaml
+++ b/cloudmart-frontend.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: cloudmart-pod-execution-role
       containers:
       - name: cloudmart-frontend-app
-        image: 597088060832.dkr.ecr.us-east-1.amazonaws.com/cloudmart-frontend:latest
+        image: CONTAINER_IMAGE
 ---
 
 apiVersion: v1
